# PlayPlayer

./: README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/chiron/playpalyer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/chiron/playpalyer/: MainActivity.java  MainActivity.kt  MediaActivity.java  NewRecorderActivity.java  RecorderActivity.java
app/src/main/java/com/chiron/playpalyer/adapter/: FileViewerAdapter.java
app/src/main/java/com/chiron/playpalyer/error/: MediaError.java
app/src/main/java/com/chiron/playpalyer/fragment/: FileViewerFragment.java  PlaybackFragment.java  RecordFragment.java  SettingsFragment.java  TTSFragment.java
app/src/main/java/com/chiron/playpalyer/media/: BaseDecoder.java  DecodeState.java  IDecoder.java  IDecoderProgress.java  IDecoderStateListener.java  (+3 more)
app/src/main/res/drawable/: record_progress_bar.xml  selector.xml
app/src/main/res/layout/: activity_main.xml  activity_media.xml  activity_new_record.xml  activity_recorder.xml  card_view.xml  fragment_file_viewer.xml  fragment_record.xml  fragment_tts.xml  toolbar.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/chiron/playpalyer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
player/: CMakeLists.txt  build.gradle
player/src/androidTest/java/com/chiron/player/: ExampleInstrumentedTest.java
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: CMakeLists.txt
player/src/main/cpp/JNI/: MyJNI.cpp
player/src/main/cpp/glm/: CMakeLists.txt
player/src/main/java/com/chiron/player/openglJava/renderer/: JavaRenderer.java
player/src/main/java/com/chiron/player/openglJava/utils/: ShaderUtil.java
player/src/test/java/com/chiron/player/: ExampleUnitTest.java
(+42 files in other folders)
